- fix: https://github.com/padreati/rapaio/issues/66